<resources>
    <string name="app_name">Baytna</string>
    <string-array name="onboarding_titles">
        <item>Welcome to Service App</item>
        <item>Book Worker</item>
        <item>Payment Online</item>
    </string-array>
    <string-array name="onboarding_splashs">
        <item>Choose from a variety of services like Cleaning, Electrical, Plumbing, and Garden workers to meet your needs.</item>
        <item>You can Book a worker at any time. Select the day and how many times you want this service.</item>
        <item>You have the option to pay using credit or cash as you like.</item>
    </string-array>


    <string name="emailHint">E-mail</string>
    <string name="passHint">Password</string>
    <string name="forgetPass">Forget Password?</string>
    <string name="loginbtn">Login</string>

    <string name="fnameHint">Name</string>
    <string name="lnameHint">Address</string>
    <string name="signemail">E-mail</string>
    <string name="confirmpass">Confirm password</string>
    <string name="mobHint">Mobile</string>
    <string name="signUp">Sign Up</string>
    <string name="profile_image">profile image</string>
    <string name="bkLoginbtnDesc_id">back to login description</string>


    <string name="profile">Profile</string>
    <string name="user_name">Hagar Hamdy</string>
    <string name="email_profile">hello@gmail.com</string>
    <string name="mobile_profile">+201111864178</string>
    <string name="address_profile">2 El-Hosary St 6October City, Giza </string>
    <string name="logout_profile">Logout</string>

    <string name="welcome">Welcome to Baytna</string>
    <string name="welcomeSnt">Find your demand service workers</string>
    <string name="btn1">Sign up</string>
    <string name="btn2">Log in </string>

</resources>