<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/backgroud"
    tools:context=".View.SignUp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/baytna_logo"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:elevation="4dp"
        tools:layout_editor_absoluteY="3dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/la"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-26dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Create Account"
                    android:textColor="@color/dark_Cyan"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/fname_id"
                    style="@style/Edit_txt_style_signup"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_txt_shape"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="8dp"
                    android:hint="@string/fnameHint"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />





                <EditText
                    android:id="@+id/signupemail_id"
                    style="@style/Edit_txt_style_signup"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_txt_shape"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="8dp"
                    android:hint="@string/signemail"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/passsign_id"
                    style="@style/Edit_txt_style"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_txt_shape"
                    android:drawableLeft="@drawable/pass"
                    android:drawablePadding="8dp"
                    android:hint="@string/passHint"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/confirmpass_id"
                    style="@style/Edit_txt_style"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_txt_shape"
                    android:drawableLeft="@drawable/pass"
                    android:drawablePadding="8dp"
                    android:hint="@string/confirmpass"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/mob_id"
                    style="@style/Edit_txt_style"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_txt_shape"
                    android:drawableLeft="@drawable/mob"
                    android:drawablePadding="8dp"
                    android:hint="@string/mobHint"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_btn2_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@color/light_grey"
                    android:text="@string/signUp"
                    android:textSize="18sp"
                    app:cornerRadius="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forget_btn_id" />


            </LinearLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>


    <ImageButton
        android:id="@+id/backtoLogin_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/arrow_back_white"
        android:contentDescription="@string/bkLoginbtnDesc_id"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>