<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:fitsSystemWindows="true"

    tools:context=".View.Login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/baytna_logo"
        tools:layout_editor_absoluteY="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="40dp"
        android:layout_marginBottom="-26dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Welcome Back"
                    android:textColor="@color/dark_Cyan"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <EditText
                    android:id="@+id/Email_edt_id"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    style="@style/Edit_txt_style"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/edit_txt_shape"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="8dp"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



                <EditText

                    android:id="@+id/Pass_edt_id"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    style="@style/Edit_txt_style"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/edit_txt_shape"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/passHint"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Email_edt_id" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forget_btn_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="sans-serif"
                    android:minWidth="0dp"
                    android:padding="0dp"
                    android:text="@string/forgetPass"
                    android:textAllCaps="false"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Pass_edt_id" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn_id"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@color/light_grey"
                    android:text="@string/loginbtn"
                    android:textSize="18sp"
                    app:cornerRadius="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forget_btn_id" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/Linear"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_weight="1"
                            android:background="@android:color/black" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="sans-serif"
                            android:text="OR"

                            android:textColor="@android:color/black"
                            android:textSize="14sp" />


                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_weight="1"
                            android:background="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="366dp"
                        android:layout_height="34dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.476"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="441dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/google_icon" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/facebook" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <TextView
                        android:id="@+id/Donthave_txt_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="Don't have an account?"
                        android:textColor="@android:color/black"
                        android:textSize="13sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/Signup_btn_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:backgroundTint="@android:color/white"
                        android:fontFamily="sans-serif"
                        android:padding="0dp"
                        android:text="Sign Up"
                        android:textAllCaps="false"
                        android:textColor="@color/light_blue"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

    <ImageButton

    android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/arrow_back_white"
        android:contentDescription="@string/bkLoginbtnDesc_id"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>




